--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "C:\\Users\\gheorghe.sava\\AppData\\Roaming\\npm\\nodemon.cmd src/index.js"
+    "start": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^4.1.0",
-    "mongoose": "^5.6.8"
+    "mongoose": "^5.6.8",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.19.1"
   }
 }
