--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.5",
     "faker": "^4.1.0",
+    "form-data": "^2.5.1",
     "mongoose": "^5.6.8",
     "morgan": "^1.9.1",
+    "node-fetch": "^2.6.0",
     "nodemon": "^1.19.1"
   }
 }
